# index-creation

./: .bumpversion.cfg  LICENSE  Makefile  README.md  environment.yml  make.cmd  pyproject.toml
arcgis/: index-creation.aprx  index-toolbox.AddPreconfiguredSimpsonsDiversityIndex.pyt.xml  index-toolbox.AddSimpsonsDiversityIndex.pyt.xml  index-toolbox.pyt  index-toolbox.pyt.xml  simpson-index-toolbox .pyt  simpson-index-toolbox .pyt.xml
arcgis/.backups/: index-creation.aprx
arcgis/GpMessages/: 305040353115100  305148864280600  308100126657300  308167739716600  310905303117900  311430070817900  311615880902000  311648169854100  311722601228600  311878627805400  311905662157400  311959972437200  312088712427700  312178237143900  319001800888200  319061362674900  319457385825000  321340409479900  383147667805500  383186392262500  383200574721200  383374577631100  383644009938200  383759590674000  383814523104500  384101981347000  384205261305000  386165968322400  386243590265200  386258488459300  386272607197200  386322456449700  393890026751600  399616090491400  400021057715800  400042726823000  400075553616800  400091521129500  400106712930300  400123506098300  (+6 more)
conda-recipe/: meta.yaml
docsrc/: api-index-creation.rst  conf.py  index.rst  simpson-index-toolbox.rst
docsrc/notebooks/: get-rst-tables.ipynb  index-variable-discovery.ipynb
notebooks/: notebook-template.ipynb
references/: Wikipedia - Simpson Index.url  index_variables.xlsx
scripts/: make_data.py
src/index_creation/: __init__.py  arcgis.py  config.py  stats.py
testing/: test_index_creation.py
(+11 files in other folders)
