[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'index-creation'
version = "0.1.0"
authors = [
  { name="Joel McCune"},
]
description = "Tools for creating and working with indexes."
readme = "README.md"
requires-python = ">=3.6, <=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
license = {file = "LICENSE"}
dependencies = [
    "arcgis>=2.0.1",
    "h3>=4.0.0b2",
    "numpy>=1.7",
    "pandas>=1.0.5",
    "pyarrow>=1.0.0",
]
